--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 <!--      <script src="https://unpkg.com/element-ui/lib/index.js"></script>-->
 <!--      <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.16.9/xlsx.full.min.map"></script>-->
 <!--      <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.16.9/xlsx.min.js"></script>-->
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.16.9/xlsx.core.min.js" integrity="sha512-qcjxCpal2fC5XTlJBB6yc/T2g7Xuxd0uHz+syZZEByojMPnKXroczpN3vrxL3ifHx4RVy4Jj8jVkXseQ5irtWA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<!--      <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.16.9/xlsx.core.min.js" integrity="sha512-qcjxCpal2fC5XTlJBB6yc/T2g7Xuxd0uHz+syZZEByojMPnKXroczpN3vrxL3ifHx4RVy4Jj8jVkXseQ5irtWA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>-->
       <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
